--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wordle-clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://code.eternalthinker.co/wordle-clone",
+  "homepage": "https://juliens-binalot.github.io/class-wardle",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
